# age_related_conditions

./: .gitignore  README.md  pyproject.toml
exp/: 01_data_discovery.py  02_baseline_random_forest.py  03_baselines_comparison.py  04_logistics_bayesian.py  04_logistics_bayesian_v2.1.py  04_logistics_bayesian_v2.2.py  04_logistics_bayesian_v2.py  04_logistics_bayesian_v3.1-analyzing.py  04_logistics_bayesian_v3.1.1.py  04_logistics_bayesian_v3.1.py  04_logistics_bayesian_v3.2.py  04_logistics_bayesian_v3.py  04_logistics_bayesian_v4.0.1.py  04_logistics_bayesian_v4.1.py  04_logistics_bayesian_v4.2.py  04_logistics_bayesian_v4.py  04_logistics_bayesian_v5.1.py  04_logistics_bayesian_v5.py  04_logistics_bayesian_v6.py  04_logistics_bayesian_v6_1.py  04_logistics_bayesian_v6_1a.py  04_logistics_bayesian_v6_2.py  04_logistics_bayesian_v6_2a.py  04_logistics_bayesian_v6a.py  05_tsne.py  05_tsne_v2.py  06_bayesian_gp.py  06_bayesian_gp_v2.py  07_autoencoder.py  07_autoencoder_v2.py  07_autoencoder_v3.py  08_neural_network_classifier.py  08_neural_network_classifier_v2.py  09_tabpfn.py  10_bayesian_neural_network.py  11.1_features_selection_sampler_logistic_regression.py  11.1b_features_selection_sampler_logistic_regression.py  11.1c_features_selection_sampler_logistic_regression.py  11.1d_features_selection_sampler_neuralnetwork.py  11.1e_features_selection_sampler_neuralnetwork.py  (+14 more)
exp/test_bayesian_neural_networks/: bayesian_nn_pyro.py
exp_results/: 20230728_14_28_11.1f_features_selection_sampler_neuralnetwork_guess.ipynb  20230801_12_27_13_pretrained_nn_with_bayesian_logistics.ipynb
scripts/: data.sh  record_exp.sh
