[tool.poetry]
name = "age-related-conditions"
version = "0.1.0"
description = "Kaggle competition: Identifying age-related conditions"
authors = ["beekill <nguyenmbquan95@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "age_related_conditions" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"
pandas = "^2.0.1"
seaborn = "^0.12.2"
scipy = "^1.10.1"
numpyro = "^0.11.0"
xgboost = "^1.7.5"
lightgbm = "^3.3.5"
catboost = "^1.2"
arviz = "^0.15.1"
funsor = "^0.4.5"
torch = { version = "^2.0.1+cpu", source = "torch-cpu" }
torchvision = { version = "^0.15.2+cpu", source = "torch-cpu" }
torchaudio = { version = "^2.0.2+cpu", source = "torch-cpu" }

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.0"
jupytext = "^1.14.5"
kaggle = "^1.5.13"
ipywidgets = "^8.0.6"
itables = "^1.5.2"


[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
